fix GiphyIcon spacing

--- a/examples/website-demos/social-messaging/src/components/MessageInput/SocialMessageInput.scss
+++ b/examples/website-demos/social-messaging/src/components/MessageInput/SocialMessageInput.scss
@@ -72,6 +72,9 @@
     }
 
     &.giphy {
+      display: flex;
+      flex-direction: row;
+      align-items: center;
       border: 2px solid $accent-primary;
       caret-color: $accent-primary;
     }
